--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: elixir
 elixir: 1.9.4
 otp_release: 20.3
+
+script:
+  - MIX_ENV=test mix do compile --warnings-as-errors, coveralls.json
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
