--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ elixir: 1.9.4
 otp_release: 20.3
 
 script:
-  - MIX_ENV=test mix do compile --warnings-as-errors, coveralls.json
+  - MIX_ENV=test mix do compile, coveralls.json
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
