added: support for https. added: support for receiving telegram messages from the https server. fixed: a bug in the mix dependencies. changed: a timeout.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Logs
 logs.txt
 
+# Priv folder containing cert files
+priv/
+
+# HTTP testing files
+*.http
+
 # The directory Mix will write compiled artifacts to.
 /_build/
 
